crypto: add mbedtls support. cmake .. -DUSE_MBEDTLS=ON
Signed-off-by: Isaev Ruslan <legale.legale@gmail.com>

--- a/crypto/CMakeLists.txt
+++ b/crypto/CMakeLists.txt
@@ -1,5 +1,15 @@
 # crypto
 
-add_lib_batch(vmecs-crypto STATIC "*.c")
+# Option to select the crypto library
+option(USE_MBEDTLS "Use MbedTLS instead of OpenSSL" ON)
 
-target_link_libraries(vmecs-crypto ssl crypto)
+if(USE_MBEDTLS)
+	add_lib_batch(vmecs-crypto STATIC "*.c")
+	target_link_libraries(vmecs-crypto mbedtls mbedcrypto)
+	target_compile_definitions(vmecs-crypto PUBLIC USE_MBEDTLS)
+else()
+	add_lib_batch(vmecs-crypto STATIC "*.c")
+	target_link_libraries(vmecs-crypto ssl crypto)
+endif()
+
+
